--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.31.0",
     "@supabase/supabase-js": "^2.90.1",
+    "openai": "^6.16.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1"
   },
